test(api): pin the Java-resolve and fail-safe guard in all three templates
Closes audit finding M-1. The previous fix changed three templates and only bash
was tested — the fish and PowerShell guard inversions and their added
getJavaVersion calls had nothing asserting them at all.

Adds allTemplatesResolveJavaAfterTheChecksAndFailSafeWhenItIsUnknown, in the
same source-level shape as allTemplatesUseAnAlreadyInstalledFabricLauncher...,
which exists precisely because fish and PowerShell cannot be executed on every
machine. It pins two properties per template:

- the version is resolved AFTER the Java-check block, so a pack that installs
  its own Java does not reach setupForge with JAVA_VERSION still on its
  do_not_manually_edit placeholder
- the Forge/SSJ guard is the fail-safe polarity — "not numeric OR >= 24", never
  "numeric AND >= 24"

Polarity is the half no syntax check can cover: a guard inverted the wrong way
still parses, still runs, and silently reinstates the crash.

Teeth verified per shell and per property — six mutations, six failures:

  guard un-inverted      sh FAILS   fish FAILS   ps1 FAILS
  resolve call removed   sh FAILS   fish FAILS   ps1 FAILS

The second row did NOT fail on the first attempt, and the reason is worth
keeping: the assertion searched backwards from the 32-bit-warning marker, so it
matched one of the getJavaVersion calls *inside* the check block and passed with
the post-block call deleted. It now anchors on the LAST installJava — every
install call being inside that block — and requires the resolve call to fall
between it and the marker. A pin that cannot fail is exactly what this test
class exists to avoid, so it was checked rather than assumed.

api 306 (1 skip).

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>